// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscountView component renders correctly with discounts 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../assets/icons8-bistro-64.png",
        }
      }
    />
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 60,
          "fontStyle": "normal",
          "fontWeight": "400",
        }
      }
    >
      React Bistro
    </Text>
  </View>
  <View
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <RCTScrollView
        data={
          [
            {
              "amount": 5,
              "id": 3233,
              "type": "dollar",
            },
            {
              "amount": 10,
              "id": 3234,
              "type": "percentage",
            },
            {
              "amount": 20,
              "id": 3235,
              "type": "percentage",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                $5
              </Text>
              <Image
                source={
                  {
                    "testUri": "../../../assets/icons8-check-50.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                10%
              </Text>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                20%
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`DiscountView component renders correctly without applied discounts 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../assets/icons8-bistro-64.png",
        }
      }
    />
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 60,
          "fontStyle": "normal",
          "fontWeight": "400",
        }
      }
    >
      React Bistro
    </Text>
  </View>
  <View
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <RCTScrollView
        data={
          [
            {
              "amount": 5,
              "id": 3233,
              "type": "dollar",
            },
            {
              "amount": 10,
              "id": 3234,
              "type": "percentage",
            },
            {
              "amount": 20,
              "id": 3235,
              "type": "percentage",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                $5
              </Text>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                10%
              </Text>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderBottomColor": "#ccc",
                  "borderBottomWidth": 1,
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 16,
                  "width": "100%",
                }
              }
            >
              <Text>
                20%
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`DiscountView component renders correctly without discounts 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../assets/icons8-bistro-64.png",
        }
      }
    />
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 60,
          "fontStyle": "normal",
          "fontWeight": "400",
        }
      }
    >
      React Bistro
    </Text>
  </View>
  <View
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <RCTScrollView
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
</View>
`;
